--- a/src/react/fe-masters/src/index.html
+++ b/src/react/fe-masters/src/index.html
@@ -7,7 +7,8 @@
 		<title>Adopt Me!</title>
 	</head>
 	<body>
+		<div id="modal"></div>
 		<div id="root">not rendered</div>
-		<script src="./App.jsx"></script>
+		<script src="./App.tsx"></script>
 	</body>
 </html>
